--- a/static/src/pug/components/common/header.pug
+++ b/static/src/pug/components/common/header.pug
@@ -15,7 +15,7 @@ mixin header()
       a.header__navigation-bar__close(href="#")
       nav.header__navigation-bar__content
         ul.navigation-bar__dropdown.dropdown
-          input.navigation-bar__dropdown.dropdown__search
+          input.navigation-bar__dropdown.dropdown__search search
           li.navigation-bar__dropdown.dropdown__navbar
             a.navigation-bar__dropdown.dropdown__btn-item 首頁
           li.navigation-bar__dropdown.dropdown__navbar
