--- a/static/src/sass/components/common/_header.scss
+++ b/static/src/sass/components/common/_header.scss
@@ -223,19 +223,18 @@ $header-pc-size: 480px;
         top: 23px;
         right: 25px;
         transition:.5s ease-in-out;
-        &:before, &:after {
-          content: " ";
-          display: block;
-          height: 20px;
-          width: 1px;
-          background: #fff;
-          position: absolute;
-          left: 8px;
-          top: 0px;
-          transform:rotate(45deg);
+        &:target{
+          color: #fff;
         }
-        &:after {
-          transform:rotate(-45deg);
+        &-img{
+          position: absolute;
+          top:25px;
+          right: 30px;
+          z-index: 1;
+          @include navbar__close-img{
+            width: 17.5px;
+            height: 17.5px;
+          }
         }
       }
 
@@ -300,13 +299,30 @@ $header-pc-size: 480px;
         left: 18px;
         top: 12px;
         font-size: .5rem;
-        border: .2px solid #ddd;
+        color: rgba(255, 255, 255, 0.5);
         background-color: #1d2d56;
+        &-img{
+          @include dropdown__search-img{
+            width: 15px;
+            height: 15px;
+            top:27px;
+            right: 80px;
+            z-index: 1;
+            position: absolute;
+          }
+        }
       }
 
       &__navbar {
         position: relative;
         top:70px;
+        border-bottom: .5px solid rgba(255,255,255,0.5); 
+      }
+
+      &__home{
+        position: relative;
+        top:70px;
+        border-bottom: .5px solid rgba(255,255,255,0.5); 
       }
 
       &__btn{
@@ -322,18 +338,11 @@ $header-pc-size: 480px;
         }
       }
 
-      &__img{
-        width:16px;
-        height: 16px;
-        position: absolute;
-        top:16px;
-        left: 5px;
-      }
+
 
       &__btn-item{
         display: inline-block;
-        text-decoration: none;
-        border: .5px solid #ddd;        
+        text-decoration: none;       
         padding: 15px 14px 15px 14px;
         width: 100%;
         font-weight: normal;
@@ -376,8 +385,16 @@ $header-pc-size: 480px;
         padding: 10px 10px 10px 26px;
         display: inline-block;
         text-decoration: none;
-        border: .5px solid #ddd;
         width: 100%;
+        &-img{
+          @include dropdown__login-img{
+            width:16px;
+            height: 16px;
+          }
+          position: absolute;
+          top:16px;
+          left: 5px;
+        }
       }
 
       &__calendar{
@@ -385,8 +402,16 @@ $header-pc-size: 480px;
         padding: 10px 10px 10px 26px;
         display: inline-block;
         text-decoration: none;
-        border: .5px solid #ddd;
         width: 100%;
+        &-img{
+          @include dropdown__calendar-img{
+            width:16px;
+            height: 16px;
+          }
+          position: absolute;
+          top:16px;
+          left: 5px;
+        }
       }
 
       &__language{
@@ -394,8 +419,16 @@ $header-pc-size: 480px;
         padding: 10px 10px 10px 26px;
         display: inline-block;
         text-decoration: none;
-        border: .5px solid #ddd;
         width: 100%;
+        &-img{
+          @include dropdown__language-img{
+            width:16px;
+            height: 16px;
+          }
+          position: absolute;
+          top:16px;
+          left: 5px;
+        }
       }
 
 
