--- a/static/src/pug/components/common/header.pug
+++ b/static/src/pug/components/common/header.pug
@@ -5,17 +5,23 @@ mixin header()
       a( href='/' ) 成功大學資訊工程學系暨研究所
     h2.header__title.header__title--language
       a( href='/' )  Department of Computer Science and Information Engineering
-    button.header__language
+    a.header__language( href="#languagenav" )
+      button.header__language-img
+    nav#languagenav.header__language__nav
+      a.header__language__nav-chinese 台灣
+        button.header__language__nav-chinese-img
+      a.header__language__nav-english USA
+        button.header__language__nav-english-img
     button.header__search
-    button.header__login login
+    button.header__login 登入 
       a.header__login-img
     button.header__calendar
 
     a.header__navbtn( href="#navbtn" )
       button.header__navbtn-img
     nav#navbtn.header__navigation-bar
-      button.header__navigation-bar__close-img
-        a.header__navigation-bar__close( href="#close" )
+      button.header__navigation-bar__close
+        a.header__navigation-bar__close-link( href="#close" )
       nav.header__navigation-bar__content
         ul.navigation-bar__dropdown.dropdown
           button.navigation-bar__dropdown.dropdown__search-img
@@ -27,6 +33,7 @@ mixin header()
             input#about.navigation-bar__dropdown.dropdown__btn(type="checkbox")
             label(for="about")
               a.navigation-bar__dropdown.dropdown__btn-item 關於本系
+            button.navigation-bar__dropdown.dropdown__navbar-img
             nav.navigation-bar__dropdown.dropdown__list
               a.navigation-bar__dropdown.dropdown__item(href='/about/intro') 系所介紹
               a.navigation-bar__dropdown.dropdown__item(href='/about/teachers') 師資陣容
@@ -37,6 +44,7 @@ mixin header()
             input#research.navigation-bar__dropdown.dropdown__btn(type="checkbox")
             label(for="research")
               a.navigation-bar__dropdown.dropdown__btn-item 學術研究
+            button.navigation-bar__dropdown.dropdown__navbar-img
             nav.navigation-bar__dropdown.navigation-bar__dropdown.dropdown__list
               a.navigation-bar__dropdown.dropdown__item(href='/research/labs') 實驗室
               a.navigation-bar__dropdown.dropdown__item(href='/research/groups') 研究群
@@ -47,6 +55,7 @@ mixin header()
             input#student.navigation-bar__dropdown.dropdown__btn(type="checkbox")
             label(for="student")
               a.navigation-bar__dropdown.dropdown__btn-item 學生事務
+            button.navigation-bar__dropdown.dropdown__navbar-img
             nav.navigation-bar__dropdown.dropdown__list
               a.navigation-bar__dropdown.dropdown__item(href='/research/labs') 實驗室
               a.navigation-bar__dropdown.dropdown__item(href='/research/groups') 研究群
@@ -57,6 +66,7 @@ mixin header()
             input#announcement.navigation-bar__dropdown.dropdown__btn(type="checkbox")
             label(for="announcement")
               a.navigation-bar__dropdown.dropdown__btn-item 系所公告
+            button.navigation-bar__dropdown.dropdown__navbar-img
             nav.navigation-bar__dropdown.dropdown__list
               a.navigation-bar__dropdown.dropdown__item(href='/announcement/all') 全部公告
               a.navigation-bar__dropdown.dropdown__item(href='/announcement/administrator') 行政公告
@@ -67,6 +77,7 @@ mixin header()
             input#resources.navigation-bar__dropdown.dropdown__btn(type="checkbox")
             label(for="resources")
               a.navigation-bar__dropdown.dropdown__btn-item 資源連結
+            button.navigation-bar__dropdown.dropdown__navbar-img
             nav.navigation-bar__dropdown.dropdown__list
               a.navigation-bar__dropdown.dropdown__item(href='/resource/law') 法規彙編
               a.navigation-bar__dropdown.dropdown__item(href='/resource/rent') 線上租借
