--- a/static/src/sass/components/common/_header.scss
+++ b/static/src/sass/components/common/_header.scss
@@ -39,14 +39,15 @@ $header-pc-size: 480px;
 
     &__logo {
         position: absolute;
-        margin-top: 27px;
+        top: 27%;
         margin-left: 11px;
         margin-right: 11px;
         border-radius: 50%;
         left: -5px;
         @include header__logo{
+          repeat:no-repeat;
           height:45px;
-          width:51px;
+          width:13.6%;
         }
       @include header-pc() {
         display: grid;
@@ -64,13 +65,12 @@ $header-pc-size: 480px;
     &__title {
       color: $font-color ;
       &--chinese{
-          padding-top: 20px;
+          padding-top: 16px;
           grid-area: header__title-chinese;
           font-size: 16px;
           font-weight: bold;
           font-style: normal;
           font-stretch: normal;
-          line-height: 2;
           letter-spacing: normal;
           @include header-pc() {
             position: relative;
@@ -204,20 +204,63 @@ $header-pc-size: 480px;
       }
   }
    
-    &__search {
-        display: none;
-      @include header-pc() {
-        display: grid;
-        grid-area: header__search;
-        margin-top: 75px;
+  &__search {
+    display: none;
+  @include header-pc() {
+    display: grid;
+    grid-area: header__search;
+    margin-top: 75px;
+    position: absolute;
+    right:100px;
+    width: 26px;
+    height:26px;
+    &-img{
+      width: 26px;
+      height:26px;
+    }
+    &-searchbar{
+      max-height: 0;
+      overflow:hidden;
+      width:1853px;
+      height:150px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 2;
+      transition: max-height 1s ease-in;
+      &:target{
+        max-height:200px;
+      }
+      &-search{
+        color: black;
+        width:100%;
+        height:100%;
+        font-size: 48px;
+      }
+      &-close{
         position: absolute;
-        right:100px;
-        @include header__search{
-          width: 26px;
-          height: 26px;
+        top:25px;
+        right: 30px;
+        z-index: 1;
+        display: block;
+        width: 35px;
+        height: 35px;
+        box-sizing: border-box;
+        color: #fff;
+        transition:.5s ease-in-out;
+        &:target{
+          color: #fff;
+        }
+        &-img{
+          width: 35px;
+          height:35px;
+          position: absolute;
+          top:100%;
         }
       }
     }
+  }
+}
    
     &__login{
       display: none;
@@ -270,6 +313,42 @@ $header-pc-size: 480px;
       background:rgba(255, 255, 255, 0.6);
       opacity: 0;
       transition: opacity 0.5s ease-in-out;
+
+      &-login{
+        position: fixed;
+        top: -100%;
+        width: 100%;
+        background:rgba(255, 255, 255, 0.6);
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+        @include header-pc() {
+          display: none;
+        }
+      }
+
+      &-calendar{
+        position: fixed;
+        top: -100%;
+        width: 100%;
+        background:rgba(255, 255, 255, 0.6);
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+        @include header-pc() {
+          display: none;
+        }
+      }
+
+      &-language{
+        position: fixed;
+        top: -100%;
+        width: 100%;
+        background:rgba(255, 255, 255, 0.6);
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+        @include header-pc() {
+          display: none;
+        }
+      }
 
       &__close {
         position: absolute;
@@ -383,6 +462,99 @@ $header-pc-size: 480px;
             display: none;
           }
         }
+        &__login{
+          position: relative;
+          top:70px;
+          border-bottom: .5px solid rgba(255,255,255,0.5);
+          padding: 15px 14px 15px 14px;
+          @include header-pc() {
+            display: none;
+          }
+          &-img{
+            position: absolute;
+            top:16px;
+            left: 29px;
+            width: 26px;
+            height:26px;
+            @include header-pc() {
+              display: none;
+            }
+          }
+          &-link{
+            text-decoration: none;
+            padding: 15px 14px 15px 14px;
+            width: 100%;
+            margin-left: 48px;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: normal;
+            letter-spacing: normal;
+            color: rgba(255,255,255,0.5);
+          }
+        }
+        &__calendar{
+          position: relative;
+          top:70px;
+          border-bottom: .5px solid rgba(255,255,255,0.5);
+          padding: 15px 14px 15px 14px;
+          @include header-pc() {
+            display: none;
+          }
+          &-img{
+            position: absolute;
+            top:16px;
+            left: 29px;
+            width: 26px;
+            height:26px;
+            @include header-pc() {
+              display: none;
+            }
+          }
+          &-link{
+            text-decoration: none;
+            padding: 15px 14px 15px 14px;
+            width: 100%;
+            margin-left: 48px;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: normal;
+            letter-spacing: normal;
+            color: rgba(255,255,255,0.5);
+          }
+        }
+        &__language{
+          position: relative;
+          top:70px;
+          border-bottom: .5px solid rgba(255,255,255,0.5);
+          padding: 15px 14px 15px 14px;
+          @include header-pc() {
+            display: none;
+          }
+          &-img {
+            position: absolute;
+            top:16px;
+            left: 29px;
+            width: 26px;
+            height:26px;
+            @include header-pc() {
+              display: none;
+            }
+          }
+          &-link{
+            text-decoration: none;
+            padding: 15px 14px 15px 14px;
+            width: 100%;
+            margin-left: 48px;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: normal;
+            letter-spacing: normal;
+            color: rgba(255,255,255,0.5);
+          }
+        }
       }
 
       &__home{
@@ -423,6 +595,7 @@ $header-pc-size: 480px;
         line-height: normal;
         letter-spacing: normal;
         color: rgba(255, 255, 255, 0.5);
+        margin-left: 15px;
       }
 
       &__list{
@@ -451,76 +624,6 @@ $header-pc-size: 480px;
         letter-spacing: normal;
         color: rgba(255, 255, 255, 0.5);
       }
-
-      &__login{
-        color: rgba(255, 255, 255, 0.5);
-        padding: 10px 10px 10px 26px;
-        display: inline-block;
-        text-decoration: none;
-        width: 100%;
-        &-img{
-          @include dropdown__login-img{
-            width:16px;
-            height: 16px;
-          }
-          position: absolute;
-          top:16px;
-          left: 5px;
-          @include header-pc() {
-            display: none;
-          }
-        }
-        @include header-pc() {
-          display: none;
-        }
-      }
-
-      &__calendar{
-        color: rgba(255, 255, 255, 0.5);
-        padding: 10px 10px 10px 26px;
-        display: inline-block;
-        text-decoration: none;
-        width: 100%;
-        &-img{
-          @include dropdown__calendar-img{
-            width:16px;
-            height: 16px;
-          }
-          position: absolute;
-          top:16px;
-          left: 5px;
-          @include header-pc() {
-            display: none;
-          }
-        }
-        @include header-pc() {
-          display: none;
-        }
-      }
-
-      &__language{
-        color: rgba(255, 255, 255, 0.5);
-        padding: 10px 10px 10px 26px;
-        display: inline-block;
-        text-decoration: none;
-        width: 100%;
-        &-img{
-          @include dropdown__language-img{
-            width:16px;
-            height: 16px;
-          }
-          position: absolute;
-          top:16px;
-          left: 5px;
-          @include header-pc() {
-            display: none;
-          }
-        }
-        @include header-pc() {
-          display: none;
-        }
-      }
-
 
       @include header-pc() {
         background-color:rgba(0,0,0,0);
